src/Compiler/dartParser.java
// Generated from java-escape by ANTLR 4.11.1
package Compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INITSTATE=1, TITLE=2, THEME=3, DEBUGSHOWMODE=4, ThemeData=5, PrimarySwatch=6, 
		BIGER=7, SMALLER=8, OPERATION=9, SCAFFOLD=10, Q_MARK=11, STATE=12, CREATSTATE=13, 
		KEY=14, FULL=15, LESS=16, FOREACH=17, FOR=18, TEXT=19, CHIS=20, OPEN_PR=21, 
		CLOSE_PR=22, COLUMN=23, ROW=24, FIT=25, BOXFIT=26, FILL=27, WS=28, EMIT=29, 
		BLOC_PROVIDER=30, BLOC_CONSUMER=31, LISTNER=32, BUILDER=33, CREATE=34, 
		STATE1=35, NAVIGATOR=36, PUSH=37, MATERIAL_PAGE_ROUTE=38, ON_LONG_PRESS=39, 
		EXCLAMATION=40, TOOL_BAR_HEIGHT=41, FLEXIBLE_SPACE=42, DOUBLE=43, INFINITY=44, 
		COVER=45, CROSS_AXIS_ALIGNMENT_1=46, CROSS_AXIS_ALIGNMENT_2=47, START=48, 
		SPACER=49, FONT_SIZE=50, FONT_WEIGHT=51, FONT_WEIGHT1=52, W600=53, STYLE=54, 
		TEXT_STYLE=55, ASSET=56, IMAGE=57, APPBAR2=58, APPBAR=59, BACK=60, MAIN=61, 
		BODY=62, RUNAPP=63, LIST=64, BUILD=65, OVERRIDE=66, SETSTATE=67, ONTAP=68, 
		GestureDetector=69, WIDGET=70, BUILDCONTEXT=71, PADDING=72, PADDING1=73, 
		EDGE=74, ALL=75, VOID=76, TYPE=77, HEIGHT=78, WIDTH=79, BOOL_VAL=80, SIZEDBOX=81, 
		CONTAINER=82, CHILD=83, COLORS=84, COL=85, COLOR=86, D_DOT=87, DOT=88, 
		BORDER2=89, EXPANDED=90, CIRCULAR=91, BORDERRADIUS=92, DECORATION=93, 
		BD=94, LISTVIEW=95, SEPARATED=96, ItemBuilder=97, SeparatorBuilder=98, 
		ItemCount=99, Return=100, MAINAXIS=101, MAINAXIS1=102, CENTER=103, CONTEXT=104, 
		INDEX=105, EQUAL=106, NUM_VAL=107, SIMICOLON=108, COLON=109, OPEN_HEAD=110, 
		CLOSE_HEAD=111, OPEN_BODY=112, CLOSE_BODY=113, FINAL=114, CONST=115, VAR=116, 
		ASYNC=117, THIS=118, ABSTRACT=119, AS=120, SYNC=121, CLASS=122, WITH=123, 
		STATIC=124, DYNAMIC=125, EXTERNAL=126, GET=127, SET=128, OPERATOR=129, 
		SUPER=130, FACTORY=131, EXTENDS=132, IMPLEMENTS=133, ENUM=134, NULL=135, 
		THROW=136, NEW=137, AWAIT=138, DEFERRED=139, EXPORT=140, IMPORT=141, LIBRARY=142, 
		PART=143, TYPEDEF=144, IS=145, IF=146, ELSE=147, WHILE=148, IN=149, DO=150, 
		SWITCH=151, CASE=152, DEFAULT=153, RETHROW=154, TRY=155, ON=156, CATCH=157, 
		FINALLY=158, RETURN=159, BREAK=160, CONTINUE=161, YIELD=162, SHOW=163, 
		HIDE=164, OF=165, ASSERT=166, MATERIALAPP=167, HOME=168, VAR_NAME=169, 
		STRING_OPEN=170, STRING_VAL=171, STRING_CLOSE=172, PRACET=173, CLOSE_PRACET=174, 
		NUMBER=175, HEX_NUMBER=176, SingleLineString=177, MultilineString=178, 
		IDENTIFIER_NO_DOLLAR=179, IDENTIFIER=180;
	public static final int
		RULE_prog = 0, RULE_file_syntax = 1, RULE_string_val = 2, RULE_emit = 3, 
		RULE_declear_var = 4, RULE_declear_vars = 5, RULE_object_value = 6, RULE_val = 7, 
		RULE_ifdart = 8, RULE_arguments = 9, RULE_arguments1 = 10, RULE_block = 11, 
		RULE_function = 12, RULE_object_cubit = 13, RULE_class_definition = 14, 
		RULE_constructor = 15, RULE_constructor1 = 16, RULE_constructor2 = 17, 
		RULE_class1 = 18, RULE_class2 = 19, RULE_class3 = 20, RULE_class4 = 21, 
		RULE_bloc_provider = 22, RULE_bloc_consumer = 23, RULE_listner = 24, RULE_builder = 25, 
		RULE_material_page_route = 26, RULE_navigator = 27, RULE_on_long_press = 28, 
		RULE_tool_bar_height = 29, RULE_flexible_space = 30, RULE_spacer = 31, 
		RULE_for = 32, RULE_flutter = 33, RULE_imporT = 34, RULE_main = 35, RULE_runapp = 36, 
		RULE_classs = 37, RULE_class_less = 38, RULE_class_full = 39, RULE_class_full1 = 40, 
		RULE_const = 41, RULE_state = 42, RULE_class_full2 = 43, RULE_initstate = 44, 
		RULE_build = 45, RULE_widget = 46, RULE_child = 47, RULE_materialapp = 48, 
		RULE_home = 49, RULE_title = 50, RULE_theme = 51, RULE_debugshowmode = 52, 
		RULE_column = 53, RULE_row = 54, RULE_children = 55, RULE_text = 56, RULE_style = 57, 
		RULE_image = 58, RULE_image1 = 59, RULE_image2 = 60, RULE_scaffold = 61, 
		RULE_appbar = 62, RULE_body = 63, RULE_padding1 = 64, RULE_padding = 65, 
		RULE_expanded = 66, RULE_sizedbox = 67, RULE_hieght = 68, RULE_width = 69, 
		RULE_listview = 70, RULE_itb = 71, RULE_sb = 72, RULE_ic = 73, RULE_container = 74, 
		RULE_bord_rad = 75, RULE_color = 76, RULE_colors = 77, RULE_decoration = 78, 
		RULE_list = 79, RULE_object = 80, RULE_varible = 81, RULE_gestureDetector = 82, 
		RULE_ontap = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "file_syntax", "string_val", "emit", "declear_var", "declear_vars", 
			"object_value", "val", "ifdart", "arguments", "arguments1", "block", 
			"function", "object_cubit", "class_definition", "constructor", "constructor1", 
			"constructor2", "class1", "class2", "class3", "class4", "bloc_provider", 
			"bloc_consumer", "listner", "builder", "material_page_route", "navigator", 
			"on_long_press", "tool_bar_height", "flexible_space", "spacer", "for", 
			"flutter", "imporT", "main", "runapp", "classs", "class_less", "class_full", 
			"class_full1", "const", "state", "class_full2", "initstate", "build", 
			"widget", "child", "materialapp", "home", "title", "theme", "debugshowmode", 
			"column", "row", "children", "text", "style", "image", "image1", "image2", 
			"scaffold", "appbar", "body", "padding1", "padding", "expanded", "sizedbox", 
			"hieght", "width", "listview", "itb", "sb", "ic", "container", "bord_rad", 
			"color", "colors", "decoration", "list", "object", "varible", "gestureDetector", 
			"ontap"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'initState'", "'title'", "'theme'", "'debugShowCheckedModeBanner'", 
			"'ThemeData'", "'primarySwatch'", "'<'", "'>'", null, "'Scaffold'", "'?'", 
			"'State'", "'createState'", "'key'", "'StatefulWidget '", "'StatelessWidget'", 
			"'forEach'", "'for'", "'Text'", "'children'", "'['", "']'", "'Column'", 
			"'Row'", "'fit:'", "'BoxFit'", "'fill'", null, "'emit'", "'BlocProvider'", 
			"'BlocConsumer'", "'listener'", "'builder'", "'create'", "'state'", "'Navigator'", 
			"'push'", "'MaterialPageRoute'", "'onLongPress'", "'!'", "'toolbarHeight'", 
			"'flexibleSpace'", "'double'", "'infinity'", "'cover'", "'crossAxisAlignment'", 
			"'CrossAxisAlignment'", "'start'", "'Spacer'", "'fontSize'", "'fontWeight'", 
			"'FontWeight'", "'w600'", "'style'", "'TextStyle'", "'asset'", null, 
			"'appBar'", "'AppBar'", "'backgroundColor'", "'main'", "'body'", "'runApp'", 
			"'List'", "'build'", "'@override'", "'setState'", "'onTap'", "'GestureDetector'", 
			"'Widget'", "'BuildContext'", "'Padding'", "'padding:'", "'EdgeInsets.'", 
			"'all'", "'void'", null, "'height'", "'width'", null, "'SizedBox'", "'Container'", 
			"'child'", "'Colors'", null, "'color'", "':'", "'.'", "'BorderRadius'", 
			"'Expanded'", "'circular'", "'borderRadius'", "'decoration'", "'BoxDecoration'", 
			"'ListView'", "'separated'", "'itemBuilder'", "'separatorBuilder'", "'itemCount'", 
			"'=>'", "'mainAxisAlignment:'", "'MainAxisAlignment'", "'center'", "'context'", 
			"'index'", "'='", null, "';'", "','", "'('", "')'", null, null, "'final'", 
			"'const'", "'var'", "'async'", "'this'", "'abstract'", "'as'", "'sync'", 
			"'class'", "'with'", "'static'", "'dynamic'", "'external'", "'get'", 
			"'set'", "'operator'", "'super'", "'factory'", "'extends'", "'implements'", 
			"'enum'", "'null'", "'throw'", "'new'", "'await'", "'deferred'", "'export'", 
			"'import'", "'library'", "'part'", "'typedef'", "'is'", "'if'", "'else'", 
			"'while'", "'in'", "'do'", "'switch'", "'case'", "'default'", "'rethrow'", 
			"'try'", "'on'", "'catch'", "'finally'", "'return'", "'break'", "'continue'", 
			"'yield'", "'show'", "'hide'", "'of'", "'assert'", "'MaterialApp'", "'home'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INITSTATE", "TITLE", "THEME", "DEBUGSHOWMODE", "ThemeData", "PrimarySwatch", 
			"BIGER", "SMALLER", "OPERATION", "SCAFFOLD", "Q_MARK", "STATE", "CREATSTATE", 
			"KEY", "FULL", "LESS", "FOREACH", "FOR", "TEXT", "CHIS", "OPEN_PR", "CLOSE_PR", 
			"COLUMN", "ROW", "FIT", "BOXFIT", "FILL", "WS", "EMIT", "BLOC_PROVIDER", 
			"BLOC_CONSUMER", "LISTNER", "BUILDER", "CREATE", "STATE1", "NAVIGATOR", 
			"PUSH", "MATERIAL_PAGE_ROUTE", "ON_LONG_PRESS", "EXCLAMATION", "TOOL_BAR_HEIGHT", 
			"FLEXIBLE_SPACE", "DOUBLE", "INFINITY", "COVER", "CROSS_AXIS_ALIGNMENT_1", 
			"CROSS_AXIS_ALIGNMENT_2", "START", "SPACER", "FONT_SIZE", "FONT_WEIGHT", 
			"FONT_WEIGHT1", "W600", "STYLE", "TEXT_STYLE", "ASSET", "IMAGE", "APPBAR2", 
			"APPBAR", "BACK", "MAIN", "BODY", "RUNAPP", "LIST", "BUILD", "OVERRIDE", 
			"SETSTATE", "ONTAP", "GestureDetector", "WIDGET", "BUILDCONTEXT", "PADDING", 
			"PADDING1", "EDGE", "ALL", "VOID", "TYPE", "HEIGHT", "WIDTH", "BOOL_VAL", 
			"SIZEDBOX", "CONTAINER", "CHILD", "COLORS", "COL", "COLOR", "D_DOT", 
			"DOT", "BORDER2", "EXPANDED", "CIRCULAR", "BORDERRADIUS", "DECORATION", 
			"BD", "LISTVIEW", "SEPARATED", "ItemBuilder", "SeparatorBuilder", "ItemCount", 
			"Return", "MAINAXIS", "MAINAXIS1", "CENTER", "CONTEXT", "INDEX", "EQUAL", 
			"NUM_VAL", "SIMICOLON", "COLON", "OPEN_HEAD", "CLOSE_HEAD", "OPEN_BODY", 
			"CLOSE_BODY", "FINAL", "CONST", "VAR", "ASYNC", "THIS", "ABSTRACT", "AS", 
			"SYNC", "CLASS", "WITH", "STATIC", "DYNAMIC", "EXTERNAL", "GET", "SET", 
			"OPERATOR", "SUPER", "FACTORY", "EXTENDS", "IMPLEMENTS", "ENUM", "NULL", 
			"THROW", "NEW", "AWAIT", "DEFERRED", "EXPORT", "IMPORT", "LIBRARY", "PART", 
			"TYPEDEF", "IS", "IF", "ELSE", "WHILE", "IN", "DO", "SWITCH", "CASE", 
			"DEFAULT", "RETHROW", "TRY", "ON", "CATCH", "FINALLY", "RETURN", "BREAK", 
			"CONTINUE", "YIELD", "SHOW", "HIDE", "OF", "ASSERT", "MATERIALAPP", "HOME", 
			"VAR_NAME", "STRING_OPEN", "STRING_VAL", "STRING_CLOSE", "PRACET", "CLOSE_PRACET", 
			"NUMBER", "HEX_NUMBER", "SingleLineString", "MultilineString", "IDENTIFIER_NO_DOLLAR", 
			"IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(dartParser.EOF, 0); }
		public List<File_syntaxContext> file_syntax() {
			return getRuleContexts(File_syntaxContext.class);
		}
		public File_syntaxContext file_syntax(int i) {
			return getRuleContext(File_syntaxContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(170);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(168);
					file_syntax();
					}
					break;
				case 2:
					{
					setState(169);
					function();
					}
					break;
				}
				}
				setState(172); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Q_MARK || _la==EMIT || _la==VOID || _la==TYPE || _la==VAR_NAME );
			setState(174);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_syntaxContext extends ParserRuleContext {
		public Declear_varContext declear_var() {
			return getRuleContext(Declear_varContext.class,0);
		}
		public File_syntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_syntax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterFile_syntax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitFile_syntax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitFile_syntax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_syntaxContext file_syntax() throws RecognitionException {
		File_syntaxContext _localctx = new File_syntaxContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_syntax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			declear_var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class String_valContext extends ParserRuleContext {
		public TerminalNode STRING_OPEN() { return getToken(dartParser.STRING_OPEN, 0); }
		public TerminalNode STRING_CLOSE() { return getToken(dartParser.STRING_CLOSE, 0); }
		public TerminalNode STRING_VAL() { return getToken(dartParser.STRING_VAL, 0); }
		public String_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterString_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitString_val(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitString_val(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_valContext string_val() throws RecognitionException {
		String_valContext _localctx = new String_valContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_string_val);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(STRING_OPEN);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING_VAL) {
				{
				setState(179);
				match(STRING_VAL);
				}
			}

			setState(182);
			match(STRING_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
